kubernetes/filter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filter-deployment
  labels:
    app: filter
spec:
  replicas: 2
  selector:
    matchLabels:
      app: filter
  template:
    metadata:
      labels:
        app: filter
    spec:
      containers:
      - name: filter
        image: dunja/pspcip/filter
        imagePullPolicy: Never
        ports:
        - containerPort: 8002
          name: filter
---
apiVersion: v1
kind: Service
metadata:
  name: filter
spec:
  selector:
    app: filter
  ports:
    - port: 8002
      name: filter
