kubernetes/reverse-proxy-lb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: reverse-proxy-lb
spec:
  type: LoadBalancer
  selector:
    app: reverse-proxy
  ports:
    - port: 8085
      name: to-filter
