kubernetes/reverse-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reverse-proxy-deployment
  labels:
    app: reverse-proxy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: reverse-proxy
  template:
    metadata:
      labels:
        app: reverse-proxy
    spec:
      containers:
      - name: reverse-proxy
        image: local/pspcip/reverse-proxy
        imagePullPolicy: Never # use locally built images
        ports:
        - containerPort: 8084
          name: to-hs-proxy #pass to hybrid server with proxy protocol
        - containerPort: 8083
          name: to-hs-http #pass to hybrid server without proxy protocol
---
apiVersion: v1
kind: Service
metadata:
  name: reverse-proxy-lb
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app: reverse-proxy
  ports:
    - port: 8084
      name: to-hs-proxy
    - port: 8083
      name: to-hs-http
