kubernetes/server-with-snort.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-with-snort-deployment
  labels:
    app: server-with-snort
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server-with-snort
  template:
    metadata:
      labels:
        app: server-with-snort
    spec:
      containers:
      - name: server-with-snort
        image: miroljub1995/pspcip_server-with-snort
        imagePullPolicy: Always
        ports:
        - containerPort: 8084
          name: web
        securityContext:
          capabilities:
            add:
            - NET_ADMIN
      #   volumeMounts:
      #   - name: varlog
      #     mountPath: /var/log/apps

      - name: snort-log
        image: busybox
        # args: [/bin/sh, -c, 'tail -n+1 -f /var/log/apps/supervisor_snort.log']
        args: [/bin/sh, -c, 'while ! tail -n+1 -f /var/log/apps/supervisor_snort.log ; do sleep 1 ; done']
        volumeMounts:
        - name: shared-log
          mountPath: /var/log/apps

      volumes:
      - name: shared-log
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: server-with-snort-svc
spec:
  type: LoadBalancer
  # externalTrafficPolicy: Local
  selector:
    app: server-with-snort
  ports:
    - port: 8084
      name: web
