kubernetes/ingress-resource.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-service
spec:
  backend:
    serviceName: reverse-proxy
    servicePort: 8085
